force-app/main/default/objects/WebCart/fields/PPBTB2BV2__Additional_Data__c.field-meta.xml
<CustomField>
    <fullName>PPBTB2BV2__Additional_Data__c</fullName>
    <description>Additional Data</description>
    <label>Device Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>