force-app/main/default/objects/WebCart/fields/PPBTB2BV2__L3_ShippingAmount__c.field-meta.xml
<CustomField>
    <fullName>PPBTB2BV2__L3_ShippingAmount__c</fullName>
    <formula>TotalChargeAmount + TotalChargeTaxAmount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>