force-app/main/default/objects/WebCart/fields/PPBTB2BV2__L3_ShipsFromPostalCode__c.field-meta.xml
<CustomField>
    <fullName>PPBTB2BV2__L3_ShipsFromPostalCode__c</fullName>
    <inlineHelpText>The postal code from where the cart items will ship from.</inlineHelpText>
    <label>Ships From Postal Code</label>
    <length>9</length>
    <type>Text</type>
</CustomField>